--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -21,7 +21,7 @@
           </div>
         </div>
         <div class="card-body pb-0 p-lg-3">
-          <div class="overflow-auto px-2 pt-1" id="horizontal-scroll">
+          <div class="overflow-scroll overflow-lg-visible px-2 pt-1" id="horizontal-scroll">
             <div class="row flex-nowrap flex-lg-wrap">
               {{- range .Illust.RecentWorks }}
               <!-- Display artist's other artworks at smaller width on larger devices -->
