--- a/assets/views/mangaSeries.jet.html
+++ b/assets/views/mangaSeries.jet.html
@@ -23,7 +23,7 @@
             {* .MangaSeriesContent.Brief.Total w/o token is accurate. *}
             {* .MangaSeriesContent.Total isn't accurate without token. *}
             <div class="illust-title">{{ .MangaSeriesContent.Brief.Total }} Works</div>
-            <div class="illust-author"><a href="/artworks/{{ .MangaSeriesContent.Brief.FirstIllustID  }}">Read from the begining</a></div>
+            <div class="illust-author"><a href="/artworks/{{ .MangaSeriesContent.Brief.FirstIllustID  }}">Read from the beginning</a></div>
         </div>
     </div>
     <div class="artwork-container">
