pixivision index rework wip

--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -12994,6 +12994,10 @@ textarea.form-control-lg {
   color: white;
 }
 
+.custom-card-body a:hover {
+  text-decoration: underline !important;
+}
+
 .custom-novel-nav {
   max-height: 40vh;
 }
