--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -131,6 +131,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="/newest"><i class="bi bi-stars me-2" title="sparkling"></i>Newest</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="/pixivision"><i class="bi bi-palette me-2"></i>pixivision</a>
+              </li>
             </div>
             <div class="mb-4">
               <h3>Your profile</h3>
