--- a/assets/views/pixivisionIndex.jet.html
+++ b/assets/views/pixivisionIndex.jet.html
@@ -4,7 +4,7 @@
   <h1 class="text-center"><i class="bi bi-palette me-2"></i>pixivision</h1>
 
   <div class="col-12">
-    <div class="row row-cols-1 row-cols-md-2 row-cols-md-3 g-4">
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
       {{- range _, article := .Data }}
       <div class="col">
         <div class="custom-card bg-charcoal-surface1 thumbnail-hover-dark">
@@ -20,9 +20,10 @@
                 {{article.Title}}
               </a>
             </h4>
-            <div class="row">
+            <!-- NOTE: would not have figured out the following classes without referring to the actual pixivision web site -->
+            <div class="d-flex align-content-between align-items-baseline">
                 <!-- Tags -->
-                <div class="col">
+                <div>
                     {{- range _, tag := article.Tags }}
                     <span class="badge fw-normal me-2 mb-2 p-0">
                         <a href="/pixivision/t/{{tag.ID}}" class="text-decoration-none">#{{ tag.Name }}</a>
@@ -30,11 +31,10 @@
                     {{- end }}
                 </div>
                 <!-- Publication Date -->
-                <div class="col-auto d-flex align-items-center">
-                    <p class="text-body-secondary small mb-0">
-                        <i class="bi bi-calendar me-2"></i>{{parseTimeCustomFormat(article.Date, "2006-01-02")}}
-                    </p>
-                </div>
+                <!-- NOTE: d-inline-flex required for the child elements to not wrap weirdly when there are a lot of tags -->
+                <p class="d-inline-flex text-body-secondary small mb-0 ms-auto">
+                    <i class="bi bi-calendar me-2"></i>{{parseTimeCustomFormat(article.Date, "2006-01-02")}}
+                </p>
             </div>
           </div>
         </div>
