navbar link underline

--- a/assets/views/layout/default.jet.html
+++ b/assets/views/layout/default.jet.html
@@ -76,10 +76,12 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <!-- Icon and title -->
-          <a class="text-decoration-none fw-bold mb-0 d-flex align-items-center" href="/">
+          <a href="/">
             <img src="/img/favicon.svg" alt="PixivFE icon" width="30" height="30" class="d-inline-block me-2" />
-            <p class="h2 text-body m-0">PixivFE</p>
           </a>
+          <span class="h2 m-0">
+            <a class="text-body text-decoration-none mb-0" href="/">PixivFE</a>
+          </span>
         </div>
         <!-- Search bar (visible on md and larger devices) -->
         <div class="position-absolute top-50 start-50 translate-middle d-none d-md-block">
