--- a/assets/css/bootstrap-style.css
+++ b/assets/css/bootstrap-style.css
@@ -13012,6 +13012,10 @@ a:not(:has(img)):not([class*=btn]):not(.nav-link):hover {
   text-decoration: none;
 }
 
+::-webkit-scrollbar {
+  display: none;
+}
+
 .stamp {
   width: 96px;
   height: 96px;
