--- a/assets/views/pixivisionTag.jet.html
+++ b/assets/views/pixivisionTag.jet.html
@@ -10,7 +10,7 @@
           <div class="custom-card-body p-4">
             <!-- <div class="d-flex flex-wrap justify-content-between align-items-start"> -->
             <h2 class="display-6 fw-bold me-2">{{ .Tag.Title }}</h2>
-            <p class="lead"><span class="fw-bold">{{ len(.Tag.Articles) }}</span> <span class="fw-medium text-muted">articles</span></p>
+            <p class="lead"><span class="fw-bold">{{ .Tag.Total }}</span> <span class="fw-medium text-muted">articles</span></p>
             <!-- </div> -->
             <!-- mb-0 to remove the extra bottom margin Bootstrap adds to p class="lead" -->
             <p class="lead mb-0">{{ .Tag.Description }}</p>
