clean up artwork metadata

--- a/assets/views/fragments/artwork.jet.html
+++ b/assets/views/fragments/artwork.jet.html
@@ -152,25 +152,20 @@
       <!-- Other artwork information (views, bookmarks, likes, creation date) -->
       <div class="d-flex flex-wrap text-muted small me-2">
         <div class="me-3 mb-2 mb-lg-0">
-            <i class="bi bi-eye me-1"></i>
-            <span>{{- .Views }}</span>
+            <i class="bi bi-eye me-2"></i>{{- .Views }}
         </div>
         <div class="me-3 mb-2 mb-lg-0">
-            <i class="bi bi-heart-fill me-1"></i>
-            <span>{{- .Bookmarks }}</span>
+            <i class="bi bi-heart-fill me-2"></i>{{- .Bookmarks }}
         </div>
         <div class="me-3 mb-2 mb-lg-0">
-            <i class="bi bi-hand-thumbs-up-fill me-1"></i>
-            <span>{{- .Likes }}</span>
+            <i class="bi bi-hand-thumbs-up-fill me-2"></i>{{- .Likes }}
         </div>
         <div class="me-3 mb-2 mb-lg-0">
-            <i class="bi bi-calendar me-1"></i>
-            <span>{{- parseTime: .Date }}</span>
+            <i class="bi bi-calendar me-2"></i>{{- parseTime: .Date }}
         </div>
         {{- if .Images[0].Width != 0 && .Images[0].Height != 0 }}
         <div>
-            <i class="bi bi-arrows-angle-expand me-1"></i>
-            <span>{{ .Images[0].Width }}x{{ .Images[0].Height }}</span>
+            <i class="bi bi-arrows-angle-expand me-2"></i>{{ .Images[0].Width }}x{{ .Images[0].Height }}
         </div>
         {{- end }}
       </div>
