--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -12,10 +12,14 @@
       <div class="custom-card bg-black mb-4 mb-lg-0">
         <div class="card-header border-0 rounded-5 bg-charcoal-surface1 py-3 px-4">
           <div class="d-flex justify-content-between align-items-center">
-            <a class="text-decoration-none text-light d-flex align-items-center" href="/users/{{ .Illust.User.ID }}">
-              <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-3" style="width: 48px; height: 48px;">
-              <h2 class="m-0">{{ .Illust.User.Name }}</h2>
-            </a>
+            <div class="d-flex align-items-center">
+              <a href="/users/{{ .Illust.User.ID }}">
+                <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-3" style="width: 48px; height: 48px;">
+              </a>
+              <a href="/users/{{ .Illust.User.ID }}" class="text-body">
+                <h2 class="m-0">{{ .Illust.User.Name }}</h2>
+              </a>
+            </div>
             {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
             <a href="{{combinedUrl}}" class="custom-btn-secondary">View all</a>
           </div>
@@ -80,13 +84,11 @@
                   <!-- Comment author name and date -->
                   <div class="d-md-flex align-items-center mb-2">
                     <div class="me-md-2">
-                      <a href="/users/{{ .AuthorID }}/bookmarks" class="text-body text-decoration-none">
-                        <h6 class="mb-0">{{- .AuthorName }}</h6>
+                      <a href="/users/{{ .AuthorID }}/bookmarks" class="fw-bold text-body text-decoration-none">
+                        {{- .AuthorName }}
                       </a>
                     </div>
-                    <div>
-                      <small class="text-muted">{{ .Date }}</small>
-                    </div>
+                    <small class="text-muted">{{ .Date }}</small>
                   </div>
 
                   <!-- Stamp or emoji -->
