--- a/assets/views/artwork.jet.html
+++ b/assets/views/artwork.jet.html
@@ -9,40 +9,32 @@
   <div class="row">
     <!-- Recent works by artist -->
     <div class="col-12 col-lg-6">
-      <div class="custom-card bg-black mb-4 mb-lg-0">
-        <div class="card-header border-0 rounded-5 bg-charcoal-surface1 py-3 px-4">
-          <div class="d-flex justify-content-between align-items-center">
-            <div class="d-flex align-items-center">
-              <a href="/users/{{ .Illust.User.ID }}">
-                <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-3" style="width: 48px; height: 48px;">
-              </a>
-              <a href="/users/{{ .Illust.User.ID }}" class="text-body">
-                <h2 class="m-0">{{ .Illust.User.Name }}</h2>
-              </a>
-            </div>
-            {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
-            <a href="{{combinedUrl}}" class="custom-btn-secondary">View all</a>
+      <div class="custom-card bg-charcoal-surface1 py-3 px-4">
+        <div class="d-flex justify-content-between align-items-center">
+          <div class="d-flex align-items-center">
+            <a href="/users/{{ .Illust.User.ID }}">
+              <img src="{{ .Illust.User.Avatar }}" alt="{{ .Illust.User.Name }}" class="rounded-circle object-fit-cover me-3" style="width: 48px; height: 48px;">
+            </a>
+            <a href="/users/{{ .Illust.User.ID }}" class="text-body">
+              <h2 class="m-0">{{ .Illust.User.Name }}</h2>
+            </a>
           </div>
+          {{- combinedUrl := "/artworks-multi/" + joinArtworkIds(.Illust.RecentWorks) }}
+          <a href="{{combinedUrl}}" class="custom-btn-secondary">View all</a>
         </div>
-        <div class="card-body pb-0 p-lg-3">
-          <div class="overflow-scroll overflow-lg-visible px-2 pt-1" id="horizontal-scroll">
-            <div class="row flex-nowrap flex-lg-wrap">
-              {{- range .Illust.RecentWorks }}
-              <!-- Display artist's other artworks at smaller width on larger devices -->
-              <!-- Should always be a bit larger than the thumbnails for the related works -->
-              <div class="col-6 col-md-4 px-2">
-                  <div class="card h-100 border-0">
-                    {{ include "fragments/thumbnail-dt" . }}
-                    <div class="card-body bg-black py-2 px-0">
-                      {{ include "fragments/thumbnail-tt" . }}
-                    </div>
-                  </div>
+        </div>
+        <div id="horizontal-scroll" class="row flex-nowrap flex-lg-wrap overflow-scroll overflow-lg-visible my-3 mx-0">
+          {{- range .Illust.RecentWorks }}
+          <div class="col-6 col-md-4 px-2">
+              <div class="card h-100 border-0">
+                {{ include "fragments/thumbnail-dt" . }}
+                <div class="card-body bg-black py-2 px-0">
+                  {{ include "fragments/thumbnail-tt" . }}
+                </div>
               </div>
-              {{- end }}
-            </div>
           </div>
+          {{- end }}
         </div>
-      </div>
     </div>
 
     <!-- Comments section -->
